--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Carson Trinh</title>
-        <link rel="images/outline_account_circle_black_48dp.png"> <!-- TODO: doesn't work -->
+        <link rel="images/outline_account_circle_black_48dp.png"> <!-- TODO: doesn't work... -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
