Update resume page

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-                                <li><a href="#resume">Resume</a></li>
                                 <li><a href="#life">Life</a></li>
                                 <li><a href="#contact">Contact</a></li>
-								<!-- <li><a href="#elements">Elements</a></li> -->
+								<li><a href="#elements">Elements</a></li>
+								<li><a href="#resume">Resume</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -51,7 +51,7 @@
                                 <span class="image main"><img src="images/me.jpg" alt="" /></span>
                                 <p>Hi there! My name is Carson Trinh. I was born and raised in San Jose, CA. Currently, I'm attending UC Berkeley, where I'm finishing up my bachelor's degree in Computer Science.</p>
                                 <p>After graduating, I will be moving to the opposite side of the country to New York City, where I'll be joining Bloomberg L.P. as a full-time software engineer. It's a huge change, and I'm incredibly excited to start this new chapter of my life.</p>
-                                <p>I like to do all sorts of things in my free time, although I'm currently focusing on just a handful of hobbies. The flavor of the year is photography, which I've taken more seriously for the past few months (fun fact: all of the pictures on this website are mine! Except for the ones of me, of course). I'm also a huge fan of Halo, the MCU, and Harry Potter!</p>
+                                <p>I like to do all sorts of things in my free time, although I'm currently focusing on just a handful of hobbies. The flavor of the year is photography, which I've taken more seriously for the past few months.</p>
                             </article>
 
                         <!-- Work -->
@@ -67,8 +67,11 @@
 						<!-- Resume -->
 							<article id="resume">
 								<h2 class="major">Resume</h2>
-								
-                                <embed src="pdf/resume.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+									<ul class="actions">
+										<li><a href="pdf/resume.pdf" target="_blank" class="button icon fa-external-link">Open</a></li>
+										<li><a href="pdf/resume.pdf" download="[Carson Trinh] resume" class="button icon fa-download">Download</a></li>
+									</ul>
+                                <embed src="pdf/resume.pdf" margin=0 auto width=90% height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 
 							</article>
 
@@ -360,7 +363,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; TODO. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">copyright &copy; 2019. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
