Update website content.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Carson Trinh</title>
-        <link rel="images/outline_account_circle_black_48dp.png"> <!-- TODO: doesn't work... -->
+        <link rel="shortcut icon" href="images/me_circle_crop.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-laptop"></span>
+							<!-- <span class="icon fa-laptop"></span> -->
+      	        			<span class="image main" style="margin: 0"><img src="images/me_circle_crop.png" alt="" /></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -34,10 +35,10 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-                                <li><a href="#life">Life</a></li>
-                                <li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Elements</a></li>
 								<li><a href="#resume">Resume</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                                <li><a href="#life">Life</a></li>
+								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -49,7 +50,7 @@
                             <article id="intro">
                                 <h2 class="major">Intro</h2>
                                 <span class="image main"><img src="images/me.jpg" alt="" /></span>
-                                <p>Hi there! My name is Carson Trinh. I was born and raised in San Jose, CA. Currently, I'm attending UC Berkeley, where I'm finishing up my bachelor's degree in Computer Science.</p>
+                                <p>Hi there! My name is Carson Trinh. I'm Vietnamese-Chinese American and was born and raised in San Jose, CA. Currently, I'm attending UC Berkeley, where I'm finishing up my bachelor's degree in Computer Science.</p>
                                 <p>After graduating, I will be moving to the opposite side of the country to New York City, where I'll be joining Bloomberg L.P. as a full-time software engineer. It's a huge change, and I'm incredibly excited to start this new chapter of my life.</p>
                                 <p>I like to do all sorts of things in my free time, although I'm currently focusing on just a handful of hobbies. The flavor of the year is photography, which I've taken more seriously for the past few months.</p>
                             </article>
@@ -60,7 +61,7 @@
                                 <h3 class="major">Where am I going?</h2>
                                 <p>I'll be joining <b>Bloomberg L.P.</b> in Midtown Manhattan as a full-time software engineer this August. I don't yet know what I'll be doing as the team selection process doesn't happen until I begin, though I do have a preference for application-based projects. We'll see!</p>
                                 <h3 class="major">Why Bloomberg?</h2>
-                                <p>Choosing what my first job out of school would be has been one of the most important decisions of my life thus far, so naturally I had to think very hard about what I wanted for my future. Working as an engineer at Bloomberg appeals to me in many aspects, at least when it comes to the impressions I got while visiting the office and speaking to the engineers there. I feel like I will have a lot of room to grow here, both professionally at Bloomberg and personally as an young adult living in New York City on my own. My goal over the next many years is to develop myself as a person, and that was the understanding I had in mind when accepting the offer.</p>
+                                <p>Choosing what my first job out of school would be has been one of the most important decisions of my life thus far, so naturally I had to think very hard about what I wanted for my future. Working as an engineer at Bloomberg appeals to me in many aspects, at least when it comes to the impressions I got while visiting the office and speaking to the engineers there. I feel like I will have a lot of room to grow here, both professionally at Bloomberg and personally as an young adult living in New York City on my own. My goal over the next many years is to develop myself as a person, and that was the understanding I had when making my decision.</p>
                                 <span class="image main"><img src="images/ny_streets.jpg" alt="" /></span>
                             </article>
 
@@ -71,19 +72,92 @@
 										<li><a href="pdf/resume.pdf" target="_blank" class="button icon fa-external-link">Open</a></li>
 										<li><a href="pdf/resume.pdf" download="[Carson Trinh] resume" class="button icon fa-download">Download</a></li>
 									</ul>
-                                <embed src="pdf/resume.pdf" margin=0 auto width=90% height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                                <!-- <embed src="pdf/resume.pdf" margin=0 auto width=90% height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"> -->
 
 							</article>
 
                         <!-- Life -->
                             <article id="life">
                                 <h2 class="major">Life</h2>
-                                <p>As I mentioned in my introduction, I love to do all sorts of things! The common thread between it all is that I enjoy learning. I feel like there's a lot of things in life to enjoy, but not enough time! Consequently, I've dabbled in a lot of different activities, but I'm not a master at any of them...which is exactly why I'm currently focusing my attention on a handful of activities!</p>
-                                <h3 class="major">Hobbies</h2>
-                                <p>asdfasdfasdfasdf</p>
-                                <h3 class="major">Other things I love</h2>
-                                <p>asdfasdfasdfasdf</p>
-                                <span class="image main"><img src="images/ny_streets.jpg" alt="" /></span>
+                                <p>Explore the not—so—professional side of me.</p>
+                                <h3 class="major">Hobbies</h3>
+                                <p>I do all sorts of things in my free time! I really want to find that single activity that I'm really good at, which is why I'm always picking up new stuff. Listed here are the hobbies I'm actively doing!</p>
+								<ul class="ul-col-3">
+									<li>Photography</li>
+									<li>Singing</li>
+									<li>Guitar</li>
+									<li>Journaling</li>
+									<li>Rocket League</li>
+									<li>Cooking</li>
+								</ul>
+
+                                <p>I also think there's a lot of cool things in life to learn and enjoy, but not enough time to do it all! Here's a massive list of things I'd love to explore in time:</p>
+								<ul class="ul-col-3">
+									<li>Art</li>
+									<li>Writing</li>
+									<li>Video editing</li>
+									<li>Tech reviews</li>
+									<li>Skating</li>
+									<li>Climbing</li>
+									<li>Meditation</li>
+									<li>Volunteering</li>
+									<li>Astrophotography</li>
+									<li>Cosplay</li>
+									<li>Ice skating</li>
+									<li>Skiing</li>
+									<li>Ping pong</li>
+									<li>Music production</li>
+									<li>Traveling</li>
+									<li>Chess</li>
+									<li>UI/UX design</li>
+									<li>TV shows</li>
+								</ul>
+
+                                <h3 class="major">Carson's favorites</h3>
+                                <p>Here are a few lists of things I (currently) love!</p>
+                                <h4>Books</h4>
+									<ol class="ol-col-2">
+										<li><i>Harry Potter</i></li>
+										<li><i>Night</i></li>
+										<li><i>Outliers</i></li>
+										<li><i>American Born Chinese</i></li>
+										<li><i>The Shining</i></li>
+										<li><i>All Quiet on the Western Front</i></li>
+										<li><i>Of Mice and Men</i></li>
+										<li><i>Ender's Game</i></li>
+										<li><i>Devil in the White City</i></li>
+										<li><i>Calvin & Hobbes</i></li>
+
+<!-- 										<li><i>Harry Potter</i> (series) by J. K. Rowling</li>
+										<li><i>Night</i> by Elie Wiesel</li>
+										<li><i>Outliers</i> by Malcolm Gladwell</li>
+										<li><i>American Born Chinese</i> by Gene Luen Yang</li>
+										<li><i>The Shining</i> by Stephen King</li>
+										<li><i>All Quiet on the Western Front</i> by Erich Maria Remarque</li>
+										<li><i>Of Mice and Men</i> by John Steinbeck</li>
+										<li><i>Ender's Game</i> by Orson Scott Card</li>
+										<li><i>Devil in the White City</i> by Erik Larson</li>
+										<li><i>Calvin & Hobbes</i> by Bill Watterson</li> -->
+
+									</ol>
+                                <h4>Movies</h4>
+                                	<ol class="ol-col-2">
+										<li><i>Avengers: Infinity War</i></li>
+										<li><i>Spider-Man 2</i></li>
+										<li><i>Interstellar</i></li>
+										<li><i>How to Train Your Dragon</i> (series)</li>
+										<li><i>Wall-E</i></li>
+										<li><i>Get Out</i></li>
+									</ol>
+                                <h4>Games</h4>
+                                	<ol class="ol-col-2">
+										<li><i>Halo 2</i></li>
+										<li><i>Halo: Combat Evolved</i></li>
+										<li><i>Rocket League</i></li>
+										<li><i>Team Fortress 2</i></li>
+										<li><i>Portal</i></li>
+										<li><i>Doom 2016</i></li>
+									</ol>
                             </article>
 
 						<!-- Contact -->
@@ -93,15 +167,15 @@
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input type="text" name="name" id="name" placeholder="Luna Lovegood"/>
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="text" name="email" id="email" placeholder="lovegood@thequibbler.com"/>
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
+											<textarea name="message" id="message" rows="4" placeholder="We're all still here. We're still fighting."></textarea>
 										</div>
 									</div>
 									<ul class="actions">
