Fix social media links.
- Updated instagram handle
- Fix FB link to open in new tab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Carson Trinh</h1>
-								<p>Fourth-year CS student. Wannabe-<a href="https://www.instagram.com/carsontrinh/" target="_blank">photographer</a>.
+								<p>Fourth-year CS student. Wannabe-<a href="https://www.instagram.com/carson.city/" target="_blank">photographer</a>.
                                 <br/>Upcoming software engineer at <a href="https://bloomberg.com" target="_blank">Bloomberg L.P.</a> in NYC.</p>
 							</div>
 						</div>
@@ -185,8 +185,8 @@
 								</form>
 								<ul class="icons">
                                     <li><a href="https://www.linkedin.com/in/carsontrinh/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                                    <li><a href="https://instagram.com/carsontrinh/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                                    <li><a href="https://www.facebook.com/profile.php?id=100011684538207/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                                    <li><a href="https://www.instagram.com/carson.city/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                                    <li><a href="https://www.facebook.com/profile.php?id=100011684538207/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                                     <li><a href="https://github.com/carsontrinh/" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
